// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sidebar /> matches render snapshot - login form 1`] = `
<div
  className="sidebar"
>
  <a
    href="/"
    onClick={[Function]}
  >
    Home
  </a>
  <h2
    className="mh4"
  >
    Eat Drink Healthy
  </h2>
  <div
    className="pitch"
  >
    A platform to find, share, and discuss healthy places to shop and eat.
  </div>
  <div
    className="get-started"
  >
    Get Started
  </div>
  <div
    className="pt2 pl4 pr4 pb4"
  >
    <form
      className="measure center"
      onSubmit={[Function]}
    >
      <fieldset
        className="ba b--transparent ph0 mh0"
        id="sign_in"
      >
        <legend
          className="f4 fw6 ph0 mh0"
        >
          Login
        </legend>
        <div
          className="mt3"
        >
          <label
            className="db fw6 lh-copy f6"
            htmlFor="usernameEmail"
          >
            Username / Email
          </label>
          <input
            className="pa2 input-reset ba bg-transparent hover-bg-black hover-white w-100"
            id="usernameEmail"
            name="usernameEmail"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="mv3"
        >
          <label
            className="db fw6 lh-copy f6"
            htmlFor="loginPassword"
          >
            Password
          </label>
          <input
            className="b pa2 input-reset ba bg-transparent hover-bg-black hover-white w-100"
            id="loginPassword"
            name="loginPassword"
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
      </fieldset>
      <div>
        <input
          className="b ph3 pv2 input-reset ba b--black bg-transparent grow pointer f6 dib"
          type="submit"
          value="Login"
        />
      </div>
    </form>
  </div>
</div>
`;

exports[`<Sidebar /> matches render snapshot - no action form 1`] = `
<div
  className="sidebar"
>
  <a
    href="/"
    onClick={[Function]}
  >
    Home
  </a>
  <h2
    className="mh4"
  >
    Eat Drink Healthy
  </h2>
  <div
    className="pitch"
  >
    A platform to find, share, and discuss healthy places to shop and eat.
  </div>
  <div
    className="get-started"
  >
    Get Started
  </div>
  <div />
</div>
`;

exports[`<Sidebar /> matches render snapshot - signup form, with validation errors 1`] = `
<div
  className="sidebar"
>
  <a
    href="/"
    onClick={[Function]}
  >
    Home
  </a>
  <h2
    className="mh4"
  >
    Eat Drink Healthy
  </h2>
  <div
    className="pitch"
  >
    A platform to find, share, and discuss healthy places to shop and eat.
  </div>
  <div
    className="get-started"
  >
    Get Started
  </div>
  <div
    className="pt2 pl4 pr4 pb4"
  >
    <form
      className="measure center"
      onSubmit={[Function]}
    >
      <fieldset
        className="ba b--transparent ph0 mh0"
        id="sign_up"
      >
        <legend
          className="f4 fw6 ph0 mh0"
        >
          Create Account
        </legend>
        <div
          className="mt3"
        >
          <div>
            <label
              className="db fw6 lh-copy f6 dark-red"
              htmlFor="username"
            >
              Username
            </label>
            <input
              autoFocus={true}
              className="pa2 input-reset ba bg-transparent hover-bg-black hover-white w-100 dark-red"
              id="username"
              name="username"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Username"
              type="text"
              value=""
            />
            <div
              className="ml2 mt1 dark-red"
              id="usernameError"
            >
              Username is a required field.
            </div>
          </div>
        </div>
        <div
          className="mt3"
        >
          <div>
            <label
              className="db fw6 lh-copy f6 dark-red"
              htmlFor="email"
            >
              Email
            </label>
            <input
              autoFocus={undefined}
              className="pa2 input-reset ba bg-transparent hover-bg-black hover-white w-100 dark-red"
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Email"
              type="email"
              value=""
            />
            <div
              className="ml2 mt1 dark-red"
              id="emailError"
            >
              Email address is a required field.
            </div>
          </div>
        </div>
        <div
          className="mv3"
        >
          <div>
            <label
              className="db fw6 lh-copy f6 dark-red"
              htmlFor="password"
            >
              Password
            </label>
            <input
              autoFocus={undefined}
              className="pa2 input-reset ba bg-transparent hover-bg-black hover-white w-100 dark-red"
              id="password"
              name="password"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              type="password"
              value=""
            />
            <div
              className="ml2 mt1 dark-red"
              id="passwordError"
            >
              Password is a required field.
            </div>
          </div>
        </div>
        <div
          className="mv3"
        >
          <div>
            <label
              className="db fw6 lh-copy f6 dark-red"
              htmlFor="confirmPassword"
            >
              Confirm Password
            </label>
            <input
              autoFocus={undefined}
              className="pa2 input-reset ba bg-transparent hover-bg-black hover-white w-100 dark-red"
              id="confirmPassword"
              name="confirmPassword"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="Confirm Password"
              type="password"
              value=""
            />
            <div
              className="ml2 mt1 dark-red"
              id="confirmPasswordError"
            >
              Confirm password is required.
            </div>
          </div>
        </div>
      </fieldset>
      <div>
        <input
          className="b ph3 pv2 input-reset ba b--black bg-transparent grow pointer f6 dib"
          type="submit"
          value="Create Account"
        />
      </div>
    </form>
  </div>
</div>
`;
